# DynaHug

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  nc-injected.sh  pyproject.toml  requirements.txt
classifier/: LLM_eval.ipynb  invariant.py  opcodes.txt  svm.py
classifier/data/: 3000_new_benign_syscall_counts_text-generation.parquet  HF_benign_test_set_opcodes.csv  HF_malicious_wild_malicious_syscall_counts_text-generation.parquet  HF_malicious_wild_opcodes.csv  MALHUG_injected_malicious_syscall_counts_text-classification.parquet  MALHUG_injected_malicious_syscall_counts_text-generation.parquet  MALHUG_malicious_syscall_counts_text-classification.parquet  Pickleball-malicious-opcodes.csv  all_malhug_opcodes.csv  benign_opcode_seq_counts.csv  benign_syscall_counts.csv  improved_benign_syscall_counts_text-generation.parquet  injected_malicious_syscall_counts_text-generation.parquet  injected_opcodes.csv  malicious_malhug_opcode_text_generation_all_feats_counts.csv  malicious_opcode_counts_text_generation.csv  malicious_opcode_counts_text_generation_seq.csv  malicious_opcode_seq_counts.csv  malicious_syscall_counts.parquet  malicious_syscall_counts_all.csv  malicious_syscall_counts_all_seq_proc.parquet  malicious_syscall_counts_text_classification.csv  malicious_syscall_counts_text_generation.csv  malicious_syscall_counts_text_generation_seq.csv  malicious_syscall_counts_text_generation_seq_proc.parquet  malicious_wild_opcodes.csv  new_2025_test_set_benign_syscall_counts_text-classification.parquet  new_2025_test_set_benign_syscall_counts_text-generation.parquet  new_3gram_HF_wild_malicious_syscall_counts_text-generation.parquet  new_3gram_benign_syscall_counts_text-generation.parquet  new_3gram_pklball_malicious_syscall_counts_text-generation.parquet  new_4gram_HF_wild_malicious_syscall_counts_text-generation.parquet  new_4gram_pklball_malicious_syscall_counts_text-generation.parquet  new_HF_benign_test_set_opcodes.csv  new_HF_wild_mal_text-generation.csv  new_MALHUG_injected_malicious_syscall_counts_all.parquet  new_MALHUG_injected_malicious_syscall_counts_all_incomplete.parquet  new_MALHUG_injected_malicious_syscall_counts_text-classification.parquet  new_MALHUG_injected_malicious_syscall_counts_text-generation.parquet  new_MALHUG_tc_malicious_syscall_counts_text-classification.parquet  (+15 more)
experiments/: README.md  huggingface_model_categories.json  requirements.txt
experiments/scripts/: cluster_checker.py  download_gcs.py  download_hf_models.py  download_injected.py  extract_opcodes.py  extract_used.py  fickle_insertion.py  fickle_script.py  fickling_safety.py  generalise_opcodes.py  infinite_nc.sh  main.py  malhug_pickleball_comparer.py  model_tracer_runner.py  most_used.py  opcode_analysis.py  opcode_combiner.py  opensource_runner.py  payload_generator.py  pickle_opcodes.py  print_opensource_results.py  pytorch_injector.py  scan_directory.py  unique_checker.py  utils.py
malicious_detection_logs/text-generation/: Allen-UQ__Qwen2.5-7B-Instruct-DrGRPO-Multi-Hop-Pubmed_security_info.json  Allen-UQ__Qwen2.5-7B-Instruct-GRPO-2-Hop-Nei-Aug-Pubmed_security_info.json  Allen-UQ__Qwen2.5-7B-Instruct-GRPO-Nei-Tokens-p1_security_info.json  Allen-UQ__Qwen2.5-7B-Instruct-GRPO-One-Hop-Aug-Pubmed_security_info.json  AmberYifan__Qwen2.5-1.5B-Instruct-GRPO-Code-old-reward_security_info.json  AmberYifan__Qwen2.5-7B-SFT-Code-GRPO_security_info.json  ArZzzz__2A_security_info.json  BabyLM-community__ALL-baseline-large_security_info.json  BabyLM-community__ALL-baseline-small_security_info.json  BabyLM-community__ace-baseline-small_security_info.json  BabyLM-community__afr-baseline-small_security_info.json  BabyLM-community__ara-baseline-small_security_info.json  BabyLM-community__ban-baseline-small_security_info.json  BabyLM-community__bug-baseline-small_security_info.json  BabyLM-community__bul-baseline-small_security_info.json  BabyLM-community__ces-baseline-small_security_info.json  BabyLM-community__cym-baseline-small_security_info.json  BabyLM-community__dan-baseline-small_security_info.json  (+206 more)
metadata/: ben_set_archive_structure.json  checksum_verification_log.csv  pickle_benign_tag_distribution.csv  text-classification_injected.csv  training-data-model-names.csv
src/: analysis.py  download.py  inference.py  metadata_collector.py  strace_analyzer.py
utils/: utils.py
(+1853 files in other folders)
