[project]
name = "dynamic-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.0",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "argcomplete==3.6.2",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "bleach==6.2.0",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "click-default-group==1.2.4",
    "cloudpickle==3.1.1",
    "condense-json==0.1.3",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "datasets==4.2.0",
    "deprecated==1.2.18",
    "dill==0.4.0",
    "distro==1.9.0",
    "eat==1.0.0",
    "exceptiongroup==1.3.0",
    "exec-cmd==0.1.0",
    "exec-utils==0.1.1",
    "execute==1.2",
    "ey==0.3.5",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "funcsigs==1.0.2",
    "future==1.0.0",
    "gdo==0.1.2",
    "gevent==25.9.1",
    "gipc==1.8.0",
    "google-api-core==2.26.0",
    "google-auth==2.41.1",
    "google-cloud-core==2.4.3",
    "google-cloud-storage==3.4.1",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "gptexec==1.0.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "hf-xet==1.1.10",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.3",
    "idna==3.11",
    "invoke==2.2.1",
    "jinja2==3.1.6",
    "jiter==0.11.0",
    "joblib==1.5.2",
    "kitchen==1.2.6",
    "kiwisolver==1.4.9",
    "lightning-utilities==0.15.2",
    "llm==0.27.1",
    "llm-tools-execute-shell==0.1.2",
    "llmexec==0.1.1",
    "llvmlite==0.45.1",
    "logless==0.2.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "mdurl==0.1.2",
    "molot==1.0.3",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "multiprocess==0.70.16",
    "muss==0.2.2",
    "networkx==3.4.2",
    "numba==0.62.1",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "openai==2.4.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "pip==25.2",
    "pluggy==1.6.0",
    "prcssr==1.0.0",
    "processrunner==2.6.0",
    "propcache==0.4.1",
    "proto-plus==1.26.1",
    "protobuf==6.33.0",
    "psutil==5.9.8",
    "puremagic==1.30",
    "pxe==0.1.0",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.12.2",
    "pydantic-core==2.41.4",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-ulid==3.1.0",
    "pytorch-lightning==2.5.5",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "raft==1.6",
    "regex==2025.9.18",
    "requests==2.32.5",
    "restrictedpython==8.0",
    "rich==14.2.0",
    "rsa==4.9.1",
    "runnow==0.1.0.15",
    "safetensors==0.6.2",
    "scikit-learn==1.7.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "shap==0.49.1",
    "shell-cmd==1.0.2",
    "six==1.17.0",
    "slicer==0.0.8",
    "slutterprime==1.0.0",
    "sniffio==1.3.1",
    "sqlite-fts4==1.0.3",
    "sqlite-migrate==0.1b0",
    "sqlite-utils==3.38",
    "sympy==1.14.0",
    "sysexecute==1.2.1",
    "tabulate==0.9.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torch==2.9.0",
    "torchmetrics==1.8.2",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "triton==3.5.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "webencodings==0.5.1",
    "wrapt==1.17.3",
    "xmlrunner==1.7.7",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zope-event==6.0",
    "zope-interface==8.0.1",
    "zstandard==0.25.0",
]
